assets/css/style.css
/* ... */
  h2 {
    font-family: var(--main-font-family);
    font-weight: var(--h2-font-weight);
    font-size: var(--h2-font-size);
    line-height: var(--h2-line-height);
    color: var(--h2-color);
    text-transform: capitalize;
  }

  h3 {
    font-family: var(--main-font-family);
    font-weight: 700;
    font-size: var(--h3-font-size);
    line-height: var(--h3-line-height);
    color: var(--h3-color);
    text-transform: capitalize;
  }

  p {
    font-family: var(--main-font-family);
    font-weight: var(--p-font-weight);
    font-size: var(--p-font-size);
    line-height: var(--p-line-height);
    color: var(--clr-foreground);
  }

  .link, a {
    color: var(--clr-link);
    text-decoration: underline;
  }
  .link:hover, .link:active, .link:focus, a:hover, a:active, a:focus{
    color: var(--clr-link);
    text-decoration: none;
  }

  .effect {
    background: var(--effect);
    mix-blend-mode: multiply;
    pointer-events: none;
    position: fixed;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    z-index: 2;
  }

  main {
    /* Removed it to let the scrolling happen on the body */
/*     overflow-y: scroll; */
  }

/* Main */
  body {
    background-color: var(--clr-background);
    color: var(--clr-foreground);

   display: flex; 

    margin: 0;

    position: absolute;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;

    font-family: var(--main-font-family);

    gap: 0.625rem;

  }

  .body--landing {
    display: grid;
    grid-template-columns: 1.5fr 1fr;
    position: absolute;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
  }

  .main-content {
    display: flex;
    justify-content: center;
    align-self: stretch;
    flex-grow: 1;
    padding: 2.5rem 0;
  }

  .content {
/* Commented out the diplay flex to avoid showing the footer at all times */
/*     display: flex; */
    flex-direction: column;
    justify-content: space-between;
    padding: 2.5rem;
    gap: 2.5rem;
    align-self: stretch;

/* Removing this allowed me to scroll otherwise the page was stuck when I removed flex and had a fixed position */
/*     position: fixed;
    top: 0px;
    right: 0px;
    left: 0px;
    bottom: 0px; */
    
  }

  .content--landing {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 2.5rem 0rem 2.5rem 2.5rem;
    gap: 2.5rem;
    align-self: stretch;
    position: relative;

  }


  .main-image-small {
  /* This image is hidden and will show only for widths below 1000px, using the media queries below */
    display: none;
  }
  .title--article-list {
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
    border-bottom: 0.0625rem solid var(--clr-foreground);
    padding-bottom: 0.625rem;
  }

/* Header */
  .header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 0px;
    align-self: stretch;


    flex: none;
    order: 0;
    align-self: stretch;
    flex-grow: 0;
  }
  
  .header__burger-btn {
    /* Keep the burger button hidden by default */
    /* It will be shown for small widths using the media queries below */
    display: none;
    fill: var(--clr-gray);
  }
  .header__burger-btn:hover, .header__burger-btn:active, .header__burger-btn:focus {
    fill: var(--clr-foreground);
  }

  #show-mobile-nav:target {
    /* Show the hidden by default mobile nav when the burger is pressed */
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 1.875rem;
    align-self: stretch;
    padding-top: 2.125rem;
  }

  .header__nav-mobile {
    display: none;
    position: absolute;
    background-color: var(--clr-background);
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
  }

  .header__icon-back:hover * {
    fill: var(--clr-foreground);
  }

  .home-btn {
    /* class=home-btn */

    /* Auto layout */

    display: flex;
    padding: 1.25rem 1.5625rem;

    /* clr-brand */

    background: var(--clr-brand);
    border-radius: var(--border-radius);

    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 0;

    /* home-btn__txt */

    font-family: var(--main-font-family);
    font-style: normal;
    font-weight: 900;
    font-size: 1.875rem;
    line-height: 100%;

    /* Remove link style */
    text-decoration: none;
    color: var(--clr-foreground);
  }

  .home-btn:hover, .home-btn:active, .home-btn:focus {
    background-color: var(--clr-foreground);
    color: var(--clr-brand);
  }

  .header__pages {
    display: flex;
    gap: 0.625rem;
  }

  .page-link {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 0.9375rem;

    color: var(--clr-gray);

    display: flex;
    padding: 0.625rem;

    text-decoration: none;
  }

  .page-link:hover {
    color: var(--clr-foreground);
  }

  .header__pages-mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
  }

/* article-list */
  .article-link {
    display: flex;
    flex-direction: column;
    border-bottom: solid var(--clr-foreground) 0.0625rem;
    padding-bottom: 0.9375rem;
    text-decoration: none;
  }
  .article-link__title {
    color: var(--clr-gray);

  }
  .article-link__info {
    color: var(--clr-brand);
  }
  .article-link:hover *, .article-link:active *, .article-link:focus * {
    color: var(--clr-foreground);
  }
  .title--article {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.625rem;
  }
  
  .title__image {
    max-width: 80%;
    border-radius: var(--border-radius);
  }
/* blocks */
  .call-out {
    display: block;
    padding: 1.25rem 1.875rem;
    background: var(--clr-foreground);
    border-radius: var(--border-radius);
    color: var(--clr-background);
  }
/* ... */

